--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -16,10 +17,27 @@
     "url": "https://github.com/bagdik/rs-library/issues"
   },
   "homepage": "https://github.com/bagdik/rs-library#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel": "5.8.38",
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "mongoose": "5.11.12"
+    "mongoose": "5.11.12",
+    "react": "0.14.6",
+    "react-dom": "0.14.6",
+    "less": "2.6.0"
+  },
+  "devDependencies": {
+    "babel": "5.x",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.0.1",
+    "file-loader": "0.8.5",
+    "json-loader": "0.5.4",
+    "less-loader": "2.2.2",
+    "react-hot-loader": "1.3.0",
+    "style-loader": "0.13.0",
+    "url-loader": "4.1.1",
+    "webpack": "5.15.0",
+    "webpack-cli": "4.3.1",
+    "webpack-dev-server": "3.11.2"
   }
 }
